fix the shift in the play controls. Don't allow images to be dragged. Don't highlight text or free space

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,7 @@
 html {
 	height: 100%;
 	font-size: 100%;
+	/* disable highlighting of text or free space*/
 	-webkit-touch-callout: none; /* iOS Safari */
 	  -webkit-user-select: none; /* Safari */
 	   -khtml-user-select: none; /* Konqueror HTML */
@@ -14,6 +15,7 @@ html {
 	      -ms-user-select: none; /* Internet Explorer/Edge */
 	          user-select: none; /* Non-prefixed version, currently
 	                                supported by Chrome and Opera */
+
 }
 
 body {
@@ -26,6 +28,16 @@ body {
 	color: white;
 	min-height: 100%;
 	padding-bottom: 200px;
+}
+
+img {
+	/* Disable image drag*/
+	user-drag: none; 
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
 
 .navbar {
